Page MenuHome GnuPG

t-iobuf: check whether state is valid
Closed, ResolvedPublic

Description

I read the source code and find that the return value of malloc is not checked. Please check whether the check is required.

Revisions and Commits

Event Timeline

werner claimed this task.
werner triaged this task as Low priority.
werner added projects: gnupg26, Bug Report, Tests.
werner added a subscriber: werner.

You are right, it is a bad habit not to check this. Thanks for your patch.

For this regression test tool I think using an xmalloc is easier. And the boilerplate is also missing. Fixed in master (new development branch).